feat(backend archive): add archive system to properties, rooms and furnitures in db to disable instead of delete
