# Code/Server/docs/swagger.json
@@ -331,6 +331,56 @@
                         "description": "Internal Server Error"
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Archive a property by its ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "owner"
+                ],
+                "summary": "Archive property by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Property ID",
+                        "name": "property_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Archived property data",
+                        "schema": {
+                            "$ref": "#/definitions/models.PropertyResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Property not yours",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Property not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             }
         },
         "/owner/properties/{property_id}/end-contract": {
@@ -1018,7 +1068,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Delete a room by its ID",
+                "description": "Archive a room by its ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -1028,7 +1078,7 @@
                 "tags": [
                     "owner"
                 ],
-                "summary": "Delete room by ID",
+                "summary": "Archive room by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -1046,8 +1096,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "Achieved room data",
+                        "schema": {
+                            "$ref": "#/definitions/models.RoomResponse"
+                        }
                     },
                     "403": {
                         "description": "Property not yours",
@@ -1272,7 +1325,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Delete a furniture by its ID",
+                "description": "Archive a furniture by its ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -1282,7 +1335,7 @@
                 "tags": [
                     "owner"
                 ],
-                "summary": "Delete furniture by ID",
+                "summary": "Archive furniture by ID",
                 "parameters": [
                     {
                         "type": "string",
@@ -1293,8 +1346,11 @@
                     }
                 ],
                 "responses": {
-                    "204": {
-                        "description": "No Content"
+                    "200": {
+                        "description": "Archived furniture data",
+                        "schema": {
+                            "$ref": "#/definitions/models.FurnitureResponse"
+                        }
                     },
                     "404": {
                         "description": "Furniture not found",
@@ -1770,6 +1826,9 @@
         "models.FurnitureResponse": {
             "type": "object",
             "properties": {
+                "archived": {
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -2017,6 +2076,9 @@
                 "address": {
                     "type": "string"
                 },
+                "archived": {
+                    "type": "boolean"
+                },
                 "area_sqm": {
                     "type": "number"
                 },
@@ -2082,6 +2144,9 @@
         "models.RoomResponse": {
             "type": "object",
             "properties": {
+                "archived": {
+                    "type": "boolean"
+                },
                 "id": {
                     "type": "string"
                 },
